@@ -20,6 +20,7 @@ quality-module-description=Drag __CONTROL_LEFT_CLICK__ over machines to insert q
 with-qm=__1__ with __2__
 quality-programming=Programming quality
 quality-deprogramming=Deprogramming quality
+quality-enhancing=Machine with quality modules
 programming=Program __1__ from parts
 deprogramming=Deprogram __1__ to parts
 recycling=Recycling __1__
